--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Static File Viewer</title>
   <style>
     body {
@@ -10,27 +10,41 @@
       font-family: monospace;
       padding: 1rem;
       display: flex;
-      gap: 2rem;
+      gap: 1rem;
+      height: 100vh;
+      margin: 0;
+      box-sizing: border-box;
     }
     .tree {
       white-space: pre;
-      min-width: 300px;
+      width: 350px;
+      border: 1px solid #444;
+      padding: 1rem;
+      overflow-y: auto;
+      background: #111;
+      box-sizing: border-box;
     }
-    .file:hover {
+    .file:hover, .folder:hover {
       background-color: #222;
       cursor: pointer;
     }
+    .folder {
+      user-select: none;
+    }
     #viewer {
-      flex-grow: 1;
+      width: 600px;
       background: #111;
       padding: 1rem;
       border: 1px solid #444;
       overflow: auto;
-      max-width: 70vw;
+      max-height: 100vh;
+      box-sizing: border-box;
     }
     img, video, audio {
       max-width: 100%;
       max-height: 80vh;
+      display: block;
+      margin: 0 auto;
     }
     video, audio {
       background: #000;
@@ -66,16 +80,58 @@
         const isLast = idx === nodeList.length - 1;
         let prefixStr = '';
         for (let i = 0; i < prefixes.length; i++) {
+          // Skip the first prefix always, as root has no branch line
+          if (i === 0) continue;
           prefixStr += prefixes[i] ? '│  ' : '   ';
         }
-        const branch = isLast ? '└─ ' : '├─ ';
+        // No branch line for root (when prefixes.length === 0)
+        const branch = prefixes.length === 0 ? '' : (isLast ? '└─ ' : '├─ ');
         const fullPath = basePath + node.name;
 
         const line = document.createElement('div');
-        line.textContent = prefixStr + branch + node.name;
 
-        if (!node.children) {
+        if (node.children) {
+          const toggle = document.createElement('span');
+          toggle.textContent = '>'; // collapsed by default
+          toggle.style.marginRight = '4px';
+
+          const label = document.createElement('span');
+          label.textContent = node.name + '/';
+          label.className = 'folder';
+
+          const childContainer = document.createElement('div');
+          childContainer.style.display = 'none';
+          childContainer.style.marginLeft = '0';
+
+          const childLines = buildTreeLines(node.children, prefixes.concat(!isLast), fullPath + '/');
+          childLines.forEach(child => childContainer.appendChild(child));
+
+          line.appendChild(document.createTextNode(prefixStr + branch));
+          line.appendChild(toggle);
+          line.appendChild(label);
+
+          // Make folder line full width and clickable
+          line.style.display = 'flex';
+          line.style.alignItems = 'center';
+          line.style.width = '100%';
+          line.style.cursor = 'pointer';
+          label.style.flexGrow = '1';
+
+          // Make toggle cursor default (not pointer)
+          toggle.style.cursor = 'default';
+
+          line.onclick = () => {
+            const isVisible = childContainer.style.display === 'block';
+            childContainer.style.display = isVisible ? 'none' : 'block';
+            toggle.textContent = isVisible ? '>' : 'v';
+          };
+
+          lines.push(line);
+          lines.push(childContainer);
+        } else {
           line.className = 'file';
+          line.textContent = prefixStr + branch + node.name;
+
           line.onclick = () => {
             const viewer = document.getElementById('viewer');
             viewer.innerHTML = '';
@@ -106,13 +162,8 @@
                 });
             }
           };
-        }
 
-        lines.push(line);
-
-        if (node.children) {
-          const childLines = buildTreeLines(node.children, prefixes.concat(!isLast), fullPath + '/');
-          lines.push(...childLines);
+          lines.push(line);
         }
       });
 
@@ -122,13 +173,8 @@
     async function renderTree() {
       const data = await fetchTree();
 
-      const rootName = 'nil/';
       const treeContainer = document.getElementById('file-tree');
       treeContainer.innerHTML = '';
-
-      const rootLabel = document.createElement('div');
-      rootLabel.textContent = rootName;
-      treeContainer.appendChild(rootLabel);
 
       const lines = buildTreeLines(data, [], '');
       lines.forEach(line => treeContainer.appendChild(line));
