--- a/index.html
+++ b/index.html
@@ -2,49 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Static File Viewer</title>
+  <title>nildivision/</title>
   <style>
     body {
       background: black;
       color: white;
       font-family: monospace;
-      padding: 1rem;
       display: flex;
-      gap: 1rem;
-      height: 100vh;
       margin: 0;
+      height: 100vh;
+    }
+    .layout {
+      display: flex;
+      height: 100%;
+      width: 100%;
+      padding: 1rem;
       box-sizing: border-box;
     }
     .tree {
-      white-space: pre;
-      width: 350px;
+      min-width: 256px;
+      width: 256px;
       border: 1px solid #444;
+      border-right: none;
       padding: 1rem;
-      overflow-y: auto;
       background: #111;
-      box-sizing: border-box;
     }
-    .file:hover, .folder:hover {
+    .file:hover, .folder-container:hover {
       background-color: #222;
       cursor: pointer;
     }
-    .folder {
-      user-select: none;
-    }
     #viewer {
-      width: 600px;
+      flex-grow: 1;
       background: #111;
       padding: 1rem;
       border: 1px solid #444;
-      overflow: auto;
-      max-height: 100vh;
-      box-sizing: border-box;
+      display: flex;
     }
     img, video, audio {
       max-width: 100%;
-      max-height: 80vh;
-      display: block;
-      margin: 0 auto;
+      max-height: 100%;
+      margin: auto;
     }
     video, audio {
       background: #000;
@@ -52,8 +49,10 @@
   </style>
 </head>
 <body>
-  <div class="tree" id="file-tree">Loading...</div>
-  <div id="viewer"></div>
+  <div class="layout">
+    <div class="tree" id="file-tree">loading...</div>
+    <div id="viewer"></div>
+  </div>
 
   <script>
     async function fetchTree() {
@@ -80,24 +79,32 @@
         const isLast = idx === nodeList.length - 1;
         let prefixStr = '';
         for (let i = 0; i < prefixes.length; i++) {
-          // Skip the first prefix always, as root has no branch line
           if (i === 0) continue;
           prefixStr += prefixes[i] ? '│  ' : '   ';
         }
-        // No branch line for root (when prefixes.length === 0)
         const branch = prefixes.length === 0 ? '' : (isLast ? '└─ ' : '├─ ');
         const fullPath = basePath + node.name;
 
-        const line = document.createElement('div');
-
         if (node.children) {
+          const container = document.createElement('div');
+          container.className = 'folder-container';
+          container.style.display = 'flex';
+          container.style.alignItems = 'center';
+          container.style.width = '100%';
+          container.style.cursor = 'pointer';
+
+          const prefixText = document.createElement('span');
+          prefixText.textContent = prefixStr + branch;
+
           const toggle = document.createElement('span');
           toggle.textContent = '>'; // collapsed by default
           toggle.style.marginRight = '4px';
+          toggle.style.cursor = 'default';
 
           const label = document.createElement('span');
           label.textContent = node.name + '/';
           label.className = 'folder';
+          label.style.flexGrow = '1';
 
           const childContainer = document.createElement('div');
           childContainer.style.display = 'none';
@@ -106,29 +113,20 @@
           const childLines = buildTreeLines(node.children, prefixes.concat(!isLast), fullPath + '/');
           childLines.forEach(child => childContainer.appendChild(child));
 
-          line.appendChild(document.createTextNode(prefixStr + branch));
-          line.appendChild(toggle);
-          line.appendChild(label);
+          container.appendChild(prefixText);
+          container.appendChild(toggle);
+          container.appendChild(label);
 
-          // Make folder line full width and clickable
-          line.style.display = 'flex';
-          line.style.alignItems = 'center';
-          line.style.width = '100%';
-          line.style.cursor = 'pointer';
-          label.style.flexGrow = '1';
-
-          // Make toggle cursor default (not pointer)
-          toggle.style.cursor = 'default';
-
-          line.onclick = () => {
+          container.onclick = () => {
             const isVisible = childContainer.style.display === 'block';
             childContainer.style.display = isVisible ? 'none' : 'block';
             toggle.textContent = isVisible ? '>' : 'v';
           };
 
-          lines.push(line);
+          lines.push(container);
           lines.push(childContainer);
         } else {
+          const line = document.createElement('div');
           line.className = 'file';
           line.textContent = prefixStr + branch + node.name;
 
