--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       margin: 0;
       height: 100vh;
     }
+    pre {
+      padding: 0;
+    }
     .layout {
       display: flex;
       height: 100%;
