--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       padding: 0;
       height: 100vh;
       overflow: hidden;
+      text-shadow:
+        0 0 5px color-mix(in srgb, currentColor 60%, transparent),
+        0 0 10px color-mix(in srgb, currentColor 40%, transparent),
+        0 0 15px color-mix(in srgb, currentColor 20%, transparent);
     }
     .layout {
       display: flex;
@@ -60,10 +64,42 @@
     video, audio {
       background: #000;
     }
+    .scanlines {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 1000;
+      background:
+        repeating-linear-gradient(
+          90deg,
+          rgba(255, 0, 0, 0.01),
+          rgba(255, 0, 0, 0.01) 1px,
+          rgba(0, 255, 0, 0.01) 1px,
+          rgba(0, 255, 0, 0.01) 2px,
+          rgba(0, 0, 255, 0.01) 2px,
+          rgba(0, 0, 255, 0.01) 3px
+        ),
+        repeating-linear-gradient(
+          0deg,
+          transparent,
+          transparent 1px,
+          rgba(0, 0, 0, 0.3) 1px,
+          rgba(0, 0, 0, 0.3) 2px
+        );
+      animation: scanline-shift 0.05s infinite linear;
+    }
+    @keyframes scanline-shift {
+      0% { transform: translateY(0px); }
+      100% { transform: translateY(2px); }
+    }
   </style>
 </head>
 <body>
   <div class="layout">
+    <div class="scanlines"></div>
     <div class="tree" id="file-tree">loading...</div>
     <div id="viewer"></div>
   </div>
