--- a/index.html
+++ b/index.html
@@ -53,16 +53,38 @@
       background: #111;
       padding: 1rem;
       border: 1px solid #444;
-      display: flex;
       overflow: auto;
+      display: grid;
+      place-items: center;
+      position: relative;
+    }
+    #viewer:empty::before {
+      position: absolute;
+      content: '';
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 10%;
+      background: url(icon.svg) no-repeat center center;
+      background-size: 256px;
+      pointer-events: none;
+      filter: drop-shadow(0 0 5px rgb(255 255 255 / 0.4));
+      z-index: 1;
     }
     img, video, audio {
       max-width: 100%;
       max-height: 100%;
       margin: auto;
+      position: relative;
+      z-index: 2;
     }
     video, audio {
       background: #000;
+    }
+    pre {
+      position: relative;
+      z-index: 2;
     }
     .scanlines {
       position: fixed;
@@ -72,28 +94,20 @@
       height: 100%;
       pointer-events: none;
       z-index: 1000;
+      mix-blend-mode: multiply;
       background:
         repeating-linear-gradient(
-          90deg,
-          rgba(255, 0, 0, 0.01),
-          rgba(255, 0, 0, 0.01) 1px,
-          rgba(0, 255, 0, 0.01) 1px,
-          rgba(0, 255, 0, 0.01) 2px,
-          rgba(0, 0, 255, 0.01) 2px,
-          rgba(0, 0, 255, 0.01) 3px
-        ),
-        repeating-linear-gradient(
           0deg,
-          transparent,
+          rgba(0, 0, 0, .4),
+          rgba(0, 0, 0, .4) 1px,
           transparent 1px,
-          rgba(0, 0, 0, 0.3) 1px,
-          rgba(0, 0, 0, 0.3) 2px
+          transparent 2px
         );
-      animation: scanline-shift 0.05s infinite linear;
+      animation: scanline-shift 0.01s infinite linear;
     }
     @keyframes scanline-shift {
-      0% { transform: translateY(0px); }
-      100% { transform: translateY(2px); }
+      0% { transform: translate(0px,0px); }
+      100% { transform: translate(2px,2px); }
     }
   </style>
 </head>
